<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewPrayerEventActivity">

    <EditText
        android:id="@+id/editText_eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:hint="@string/hint_eventName"/>

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_eventName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:hint="@string/hint_description"/>

    <TextView
        android:text="@string/textView_dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView_dateLabel" />

    <TextView
        android:text="@string/textView_timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_timeLabel"
        android:layout_below="@+id/textView_dateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textView_locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_timeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/textView_locationLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_timeValue"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/textView_dateValue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_dateValue"
        android:onClick="showDatePickerDialog"
        android:clickable="true"
        android:layout_above="@+id/textView_timeLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_locationValue"
        android:onClick="showLocationSearch"
        android:clickable="true"
        android:layout_alignTop="@+id/textView_locationLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/newPrayerEvent_miniMap"
        android:layout_marginTop="40dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/textView_locationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/newPrayerEvent_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="62dp"
        android:id="@+id/button_newPrayerEvent_save"
        android:onClick="savePrayerEvent" />


</RelativeLayout>
